test/org/midica/testfiles/failing/var-undefined.midica
INCLUDE inc/instruments.midica

0  c  l=$x
